# FitnessTracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  app.py  app_scheme.py  docker-compose.debug.yml  docker-compose.sqlight.yml  docker-compose.yml  entrypoint.sh  forms.py  init.sql  migrations.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
fitnesstracker/: __init__.py  config.py  forms.py  models.py  routes.py
fitnesstracker/main/: forms.py  routes.py
fitnesstracker/main/static/: index.js
fitnesstracker/static/: add.js  create_session.js  create_session.js.bak  main.css  new_session.js  statistics.css  templates.js  update_session.js
fitnesstracker/templates/: account.html  add.html  create_session.html  create_template.html  index.html  layout.html  macros.html  new_session.html  register.html  session.html  template.html  templates.html  update_session.html
fitnesstracker/templates/statistics/: heatmap_test.html  progression.html
fitnesstracker/users/: forms.py  routes.py  utils.py
fitnesstracker/workout_sessions/: forms.py  routes.py
fitnesstracker/workout_sessions/static/: create_session.js
fitnesstracker/workout_statistics/: routes.py
fitnesstracker/workout_statistics/static/: progression.js
fitnesstracker/workout_templates/: routes.py
fitnesstracker/workout_templates/static/: create_template.js
migrations/versions/: b2d40d51f998_.py  da3a7ddf960c_add_user_support.py  f99270418450_.py
src/fitnesstracker/: __init__.py  config.py  models.py
src/fitnesstracker/main/: routes.py
src/fitnesstracker/main/static/: index.js
src/fitnesstracker/static/: main.css
src/fitnesstracker/templates/: create_session.html  index.html  session.html
src/fitnesstracker/users/: forms.py  routes.py  utils.py
src/fitnesstracker/workout_sessions/: routes.py
src/fitnesstracker/workout_statistics/: routes.py
src/fitnesstracker/workout_statistics/static/: progression.js
src/fitnesstracker/workout_templates/: forms.py  routes.py
static/: scroll.css  style.css  templates.css
templates/: add.html  basic_table.html  editable_table.html  index.html  layout.html  templates.html
tests/: test_app.py  test_progression_api.py
