[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "FitnessTracker"
version = "0.0.1"
authors = [
  { name = "Matías Chávez", email = "matias.chavez@mail.ch" },
]
description = "A simple application to track your workouts"
readme = "Readme.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chavias/FitnessTracker"
Issues = "https://github.com/chavias/FitnessTracker/issues"

[tool.poetry]
name = "FitnessTracker"
version = "0.0.1"
package-mode = false
description = "A simple application to track your workouts"
authors = ["Matías Chávez <matias.chavez@mail.ch>"]
readme = "Readme.md"
packages = [{ include = "fitnesstracker", from = "src" }]

[tool.poetry.dependencies]
alembic = "^1.14.1"
anyio = "^4.8.0"
backports-tarfile = "^1.2.0"
bcrypt = "^4.2.1"
blinker = "^1.9.0"
build = "^1.2.2.post1"
cachecontrol = "^0.14.2"
certifi = "^2025.1.31"
cffi = "^1.17.1"
charset-normalizer = "^3.4.1"
cleo = "^2.1.0"
click = "^8.1.8"
crashtest = "^0.4.1"
cryptography = "^44.0.1"
distlib = "^0.3.9"
dotenv = "^0.9.9"
dulwich = "^0.22.7"
exceptiongroup = "^1.2.2"
fastjsonschema = "^2.21.1"
filelock = "^3.17.0"
findpython = "^0.6.2"
flask = "^3.1.0"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-mail = "^0.10.0"
flask-migrate = "^4.1.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.1.1"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httpx = "^0.28.1"
idna = "^3.10"
importlib-metadata = "^8.6.1"
iniconfig = "^2.0.0"
installer = "^0.7.0"
itsdangerous = "^2.2.0"
jaraco-classes = "^3.4.0"
jaraco-context = "^6.0.1"
jaraco-functools = "^4.1.0"
jeepney = "^0.8.0"
jinja2 = "^3.1.5"
keyring = "^25.6.0"
mako = "^1.3.9"
markupsafe = "^3.0.2"
more-itertools = "^10.6.0"
msgpack = "^1.1.0"
narwhals = "^1.28.0"
numpy = "^2.2.3"
packaging = "^24.2"
pandas = "^2.2.3"
pbs-installer = "^2025.2.12"
pillow = "^11.1.0"
pkginfo = "^1.12.1.2"
platformdirs = "^4.3.6"
plotly = "^6.0.0"
pluggy = "^1.5.0"
poetry = "^2.1.1"
poetry-core = "^2.1.1"
pycparser = "^2.22"
pyproject-hooks = "^1.2.0"
pytest = "^8.3.4"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
rapidfuzz = "^3.12.1"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
secretstorage = "^3.3.3"
shellingham = "^1.5.4"
six = "^1.17.0"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.38"
tomli = "^2.2.1"
tomlkit = "^0.13.2"
trove-classifiers = "^2025.2.18.16"
typing-extensions = "^4.12.2"
tzdata = "^2025.1"
urllib3 = "^2.3.0"
virtualenv = "^20.29.2"
werkzeug = "^3.1.3"
wtforms = "^3.2.1"
zipp = "^3.21.0"
zstandard = "^0.23.0"
email-validator = "^2.2.0"
pymysql = "^1.1.1"
gunicorn = "^23.0.0"
