[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fitnesstracker"
version = "0.0.1"
description = "A simple application to track your workouts"
authors = [{ name = "Matías Chávez", email = "matias.chavez@mail.ch" }]
readme = "Readme.md"
requires-python = ">=3.10,<4.0"
packages = [{ include = "fitnesstracker", from = "src" }]

[poetry.group.dev.dependencies]
pytest = "^8.3.4"

[project.urls]
Homepage = "https://github.com/chavias/FitnessTracker"
Issues = "https://github.com/chavias/FitnessTracker/issues"

[tool.poetry.dependencies]
flask = "^3.1.0"
alembic = "^1.14.1"
pandas = "^2.2.3"
plotly = "^6.0.0"
pymysql = "^1.1.1"
email-validator = "^2.2.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
itsdangerous = "^2.2.0"
wtforms = "^3.2.1"
pillow = "^11.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-wtf = "^1.2.2"
flask-bcrypt = "^1.0.1"
flask-mail = "^0.10.0"
flask-login = "^0.6.3"
dotenv = "^0.9.9"
